# Speeed

./: .gitignore  Cargo.toml  README.md  ideas.txt  leaderboard.json
.github/workflows/: release.yml
assets/: levels.ldtk
src/: input.rs  level.rs  main.rs  player.rs  settings.rs  states.rs
src/editor/: mod.rs
src/game/: mod.rs
src/leaderboard/: mod.rs  ui.rs
src/level/: finish.rs  mod.rs  start.rs
src/level/launchpad/: mod.rs
src/level/portal/: mod.rs
src/level/rope/: mod.rs
src/level/text/: mod.rs
src/menu/: mod.rs  mod_backup.rs  settings.rs
src/player/: input.rs  mod.rs
src/replay/: mod.rs
