[package]
name = "revgame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10" }
bevy-inspector-egui = "0.18.3"
bevy_ecs_ldtk = "0.7.0"
bevy_ecs_tilemap = "0.10.0" # keep in sync bevy_ecs_ldtk until https://github.com/StarArawn/bevy_ecs_tilemap/issues/373 is fixed!
bevy_hanabi = { version = "0.6.1", features = ["2d"] }
bevy_rapier2d = "0.21"
humantime = "2.1.0"
serde = "1.0"
serde_json = "1.0"
bevy_egui = "0.20"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
